[gd_scene load_steps=59 format=3 uid="uid://draaj714nuvfl"]

[ext_resource type="Script" uid="uid://1du7wps2oxjs" path="res://scenes/characters/player/player.gd" id="1_6avc5"]
[ext_resource type="Texture2D" uid="uid://dq28bo6e53qay" path="res://assets/game/Characters/basic_charakter_actions.png" id="1_t61fv"]
[ext_resource type="PackedScene" uid="uid://5ib387nw2x6g" path="res://scenes/components/hit_component.tscn" id="2_3xnwo"]
[ext_resource type="Texture2D" uid="uid://b41nw75f52s77" path="res://assets/game/Characters/basic_charakter_spritesheet.png" id="2_686vu"]
[ext_resource type="Script" uid="uid://dhrcbs8r78kgp" path="res://scripts/state_machine/node_state_machine.gd" id="3_hss88"]
[ext_resource type="Script" uid="uid://sdjy1y5isbpe" path="res://scenes/characters/player/idle_state.gd" id="4_qd3e3"]
[ext_resource type="Script" uid="uid://dnf2s6th00qd7" path="res://scenes/characters/player/walk_state.gd" id="5_qd3e3"]
[ext_resource type="Script" uid="uid://bvaijral04tto" path="res://scenes/characters/player/chopping_state.gd" id="7_mk55u"]
[ext_resource type="Script" uid="uid://b64to0soqpnut" path="res://scenes/characters/player/tilling_state.gd" id="8_xuses"]
[ext_resource type="Script" uid="uid://cmkrfysyd5u21" path="res://scenes/characters/player/watering_state.gd" id="9_42irl"]
[ext_resource type="PackedScene" uid="uid://cbeq6vu2e8eg6" path="res://scenes/components/hurt_component.tscn" id="11_djydg"]
[ext_resource type="PackedScene" uid="uid://ncvpnwwp3euh" path="res://scenes/components/health_component.tscn" id="12_bsn6e"]
[ext_resource type="PackedScene" uid="uid://ch6uq53yxlkw2" path="res://scenes/components/energy_component.tscn" id="13_blysn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_djydg"]
radius = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_3xnwo"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 480, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_djydg"]
atlas = ExtResource("1_t61fv")
region = Rect2(96, 480, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y75b"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 384, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_tebod"]
atlas = ExtResource("1_t61fv")
region = Rect2(96, 384, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nfx3"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 576, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hnlq"]
atlas = ExtResource("1_t61fv")
region = Rect2(96, 576, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_d73qs"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 672, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6wme"]
atlas = ExtResource("1_t61fv")
region = Rect2(96, 672, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsn6e"]
atlas = ExtResource("2_686vu")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_blysn"]
atlas = ExtResource("2_686vu")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv5x3"]
atlas = ExtResource("2_686vu")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykrpk"]
atlas = ExtResource("2_686vu")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1nod"]
atlas = ExtResource("2_686vu")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kqyw"]
atlas = ExtResource("2_686vu")
region = Rect2(96, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_svuau"]
atlas = ExtResource("2_686vu")
region = Rect2(0, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro20i"]
atlas = ExtResource("2_686vu")
region = Rect2(96, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxwvg"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v4cy"]
atlas = ExtResource("1_t61fv")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxlma"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieypo"]
atlas = ExtResource("1_t61fv")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_sulyr"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_71adu"]
atlas = ExtResource("1_t61fv")
region = Rect2(96, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm30n"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe74o"]
atlas = ExtResource("1_t61fv")
region = Rect2(96, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8rto"]
atlas = ExtResource("2_686vu")
region = Rect2(192, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4gk5"]
atlas = ExtResource("2_686vu")
region = Rect2(288, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0hd7"]
atlas = ExtResource("2_686vu")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpigg"]
atlas = ExtResource("2_686vu")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nt8su"]
atlas = ExtResource("2_686vu")
region = Rect2(192, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_10pim"]
atlas = ExtResource("2_686vu")
region = Rect2(288, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbtrp"]
atlas = ExtResource("2_686vu")
region = Rect2(192, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_es5sa"]
atlas = ExtResource("2_686vu")
region = Rect2(288, 288, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4se6"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 864, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c5ab"]
atlas = ExtResource("1_t61fv")
region = Rect2(96, 864, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_omk8d"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 768, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kghjy"]
atlas = ExtResource("1_t61fv")
region = Rect2(96, 768, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_72eiu"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 960, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rr0sw"]
atlas = ExtResource("1_t61fv")
region = Rect2(96, 960, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejaeo"]
atlas = ExtResource("1_t61fv")
region = Rect2(0, 1056, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbkvr"]
atlas = ExtResource("1_t61fv")
region = Rect2(96, 1056, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_omk8d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xnwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djydg")
}],
"loop": false,
"name": &"chopping_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y75b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tebod")
}],
"loop": false,
"name": &"chopping_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nfx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hnlq")
}],
"loop": false,
"name": &"chopping_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d73qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6wme")
}],
"loop": false,
"name": &"chopping_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsn6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blysn")
}],
"loop": true,
"name": &"idle_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv5x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykrpk")
}],
"loop": true,
"name": &"idle_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1nod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kqyw")
}],
"loop": true,
"name": &"idle_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_svuau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro20i")
}],
"loop": true,
"name": &"idle_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxwvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v4cy")
}],
"loop": false,
"name": &"tilling_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxlma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieypo")
}],
"loop": false,
"name": &"tilling_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sulyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71adu")
}],
"loop": false,
"name": &"tilling_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm30n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe74o")
}],
"loop": false,
"name": &"tilling_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8rto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4gk5")
}],
"loop": true,
"name": &"walk_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0hd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpigg")
}],
"loop": true,
"name": &"walk_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nt8su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10pim")
}],
"loop": true,
"name": &"walk_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbtrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_es5sa")
}],
"loop": true,
"name": &"walk_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4se6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c5ab")
}],
"loop": false,
"name": &"watering_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_omk8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kghjy")
}],
"loop": false,
"name": &"watering_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_72eiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rr0sw")
}],
"loop": false,
"name": &"watering_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejaeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbkvr")
}],
"loop": false,
"name": &"watering_right",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kghjy"]
radius = 7.07107

[sub_resource type="CircleShape2D" id="CircleShape2D_bsn6e"]
radius = 9.05539

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_blysn"]
polygon = PackedVector2Array(0, 2, 7, 5, 9, 12, 6, 18, 0, 20, -6, 19, -9, 12, -7, 5)

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
y_sort_enabled = true
position = Vector2(0, -14)
collision_layer = 2
collision_mask = 595
script = ExtResource("1_6avc5")
current_tool = 1
max_health = 20
starting_health = 18

[node name="HitComponent" parent="." instance=ExtResource("2_3xnwo")]

[node name="HitComponentCollisionShape2D" type="CollisionShape2D" parent="HitComponent"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_djydg")
debug_color = Color(0.868238, 0.179031, 0.746719, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_omk8d")
animation = &"chopping_back"
autoplay = "idle_front"
frame = 1
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11)
shape = SubResource("CircleShape2D_kghjy")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_node_state")]
script = ExtResource("3_hss88")
initial_node_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "animated_sprite_2d")]
script = ExtResource("4_qd3e3")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="Walk" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "animated_sprite_2d")]
script = ExtResource("5_qd3e3")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="Chopping" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "animated_sprite_2d", "hit_component_collision_shape")]
script = ExtResource("7_mk55u")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
hit_component_collision_shape = NodePath("../../HitComponent/HitComponentCollisionShape2D")

[node name="Tilling" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "animated_sprite_2d")]
script = ExtResource("8_xuses")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="Watering" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "animated_sprite_2d", "hit_component_collision_shape")]
script = ExtResource("9_42irl")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
hit_component_collision_shape = NodePath("../../HitComponent/HitComponentCollisionShape2D")

[node name="HurtComponent" parent="." instance=ExtResource("11_djydg")]
position = Vector2(0, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_bsn6e")
debug_color = Color(1, 0.0196078, 0, 0.419608)

[node name="HealthComponent" parent="." instance=ExtResource("12_bsn6e")]

[node name="EnergyComponent" parent="." instance=ExtResource("13_blysn")]
energy_drain_rate = 0.1

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_blysn")
